boreal/tests/assets/invalid_files/compilation/invalid_identifier_binding3.yar
// [error: expected 1 identifiers to bind, got 2]
rule a {
    condition:
        for any k, v in (0..2): (true)
}

